I thought mentioning professors would be a way to help them for the effort they put into my work. In retrospect, it just felt like name dropping.

--- a/index.html
+++ b/index.html
@@ -39,38 +39,44 @@
             Hello, my name is Ian. I graduated from the University of Oregon in 2020 majoring in Economics while minoring in mathematics and business administration. As of september 2020, I will be pursuing a Master's in Applied Economics from the same institution. Check out my bio for more information on where I grew up, my previous personal exploits, etc.
           </p>
           <p>
-            I made this page with the intent of creating an online presence. This site is meant to be a representitive of my professional career and aspirations. Currently, I'm looking for an opportunity to work in data science or public policy, but my focus is always on ensuring that my presence results in tangible benefits for any organization I join.
+            This site is meant to be a representitive of my professional career and aspirations. Currently, I'm looking for an opportunity to work in data science or public policy, but my focus is always on ensuring that my presence results in tangible benefits for any organization I join.
           </p>
-          <h2>My Previous Experience with Data</h2>
+          <h1>My current goal</h1>
+          <p>I am currently looking for a summer internship for 2021, preferably in the real of public policy or data analysis.</p>
+          <h1>My Expertise</h1>
+          <h2>Data analysis</h2>
           <ul>
             <li>
-              <strong>Surveys</strong>: I gained the contact of a local ShelterCare HR Coordinator/Volunteer and Intern manager named Mathew Loyd. He mentioned that his local team had some employee satisfaction survey data that he was unsure of how to interpret. After providing me with the data, I was able to put together a report detailing how other companies go about this process, as well as how it could be applied to their work environment to make a measurable change in quality of life and productivity. You can find this report on the <a href="https://ibogley.github.io/website/projects/">Projects</a> page.
+              <strong>Regression Analysis</strong>: Diff-in-diff, instrumetal variables, and OLS.
             </li>
             <li>
-              <strong>Regression Analysis</strong>: The economics program here at the University of Oregon strongly emphasises econometrics. I had the privilege of learning varying levels of the sub-section each with a heavy dose of R programming under <a href="https://www.lucianaetcheverry.com/">Luciana Etcheverry</a>, <a href="https://sites.google.com/site/jonathanmvdavis/">Jon Davis</a>, and <a href="https://github.com/CMLennon">Connor Lennon</a>
+              <strong>Machine Learning</strong>: Cross-validation; supervised, semi-supervised, and unsupervised learning.
             </li>
             <li>
-              <strong>Forecasting</strong>: I had the opportunity to learn forecasting techniques from <a href="https://pages.uoregon.edu/duy/">Tim Duy</a>, a professor here at the University of Oregon who runs a blog called <a href="https://blogs.uoregon.edu/timduyfedwatch/">Fed watch</a>. Within the course, labeled in my transcript as "Economic Forecasting", I was able to learn about various methods for predicting the future behavior of variables based on previous information.
+              <strong>Forecasting</strong>: Time series analysis (ARIMA, VAR, unit roots)
             </li>
             <li>
-              <strong>Exploratory Data Analysis</strong>: I have completed this category of analysis multiple times outside of the classroom. Check out my work on women's representation in San Fransisco monuments for an example.
+              <strong>Big Data</strong>: Parallel programming, API's, command line interface, and database queries.
             </li>
             <li>
-              <strong>Big Data</strong>: I had the opportunity to take a course centering on big data under <a href="https://grantmcdermott.com/">Grant McDermot</a>, which taught much about how to translate the skills we learn on smaller datasets to larger ones. It was here that I learned to use both Google BigQuery and Apache Spark.
-            </li>
-            <li>
-              <strong>Languages/Tools</strong>: R, Python, and SQL; Google BigQuery, Apache Spark, and Github.
+              <strong>Languages/Tools</strong>: R, Python, and SQLite; Google BigQuery, Apache Spark, and Git/Github; tidymodels.
             </li>
           </ul>
-          <h2>My Previous Experience in Macroeconomics</h2>
+          <h2>Macroeconomics and Policy Analysis</h2>
           <ul>
             <li>
-              <strong>International</strong>: Here at the University of Oregon, <a href="https://sites.google.com/view/shankhachakraborty">Shanka Chakrabroty</a> is known as a fantastic storyteller within the realm of economics. I had the privilege of taking two of his classes so far, each dealing with international macroeconomics. The first was an undergradaute level course detailing the basics of global currency exchanges and trade balances under the title of "International Finance". Second was a graduate level course on developing nations. Both have contributed a great deal to my understanding of global markets and geopolitics in general.
+              <strong>International</strong>: Exchange Rates, trade balance, international finance, and globalisation.
             </li>
             <li>
-              <strong>General</strong>: It was a great experience learning graduate level macroeconomics from <a href="https://brucemcgough.blog/">Bruce McGough</a>. During the course I took from him, we covered various macroeconomic models and how to utilize them towards pragmatic policy insights. From Adam Smith and classical economics to the Keynsian framework, the Neoclassical synthesis to Rational expecation models, my time learning from him was profound and enlightening.
+              <strong>General</strong>: Classical, Kenyesian, Neoclassical, and Rational Expectation models; stability analysis.
+            </li>
+            <li>
+              <strong>Policy Analysis</strong>: Game theory, behavioral economics, and public goods.
             </li>
           </ul>
+          <p>
+            For work samples, click on the projects tab.
+          </p>
         </div>
     </div>
   </body>
