--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             This site is meant to be a representitive of my professional career and aspirations. Currently, I'm looking for an opportunity to work in data science or public policy, but my focus is always on ensuring that my presence results in tangible benefits for any organization I join.
           </p>
           <h1>My current goal</h1>
-          <p>I am currently looking for a summer internship for 2021, preferably in the real of public policy or data analysis.</p>
+          <p>I am currently looking for a summer internship for 2021, preferably in the realm of public policy or data analysis.</p>
           <h1>My Expertise</h1>
           <h2>Data analysis</h2>
           <ul>
