Updated resume, front page

--- a/documents/index.html
+++ b/documents/index.html
@@ -35,8 +35,11 @@
           </p>
         </div>
         <div class="main">
-          <h2 style="text-align:center">Resume</h2>
-          <iframe class="pdf" src="https://ibogley.github.io/website/documents/resume.pdf"></iframe>
+          <h2 style="text-align:center">Resume: Data focused</h2>
+          <iframe class="pdf" src="https://ibogley.github.io/website/documents/resume_data.pdf"></iframe>
+          <br>
+          <h2 style="text-align:center">Resume: Public policy focused</h2>
+          <iframe class="pdf" src="https://ibogley.github.io/website/documents/resume_policy.pdf"></iframe>
           <br>
           <h2 style="text-align:center">Transcript</h2>
           <iframe class="pdf" src="https://ibogley.github.io/website/documents/transcript.pdf"></iframe>
