--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             Hello, my name is Ian. I graduated from the University of Oregon in 2020 majoring in Economics while minoring in mathematics and business administration. As of september 2020, I will be pursuing a Master's in Applied Economics from the same institution. Check out my bio for more information on where I grew up, my previous personal exploits, etc.
           </p>
           <p>
+            <strong><i><em>"I found Ian to be punctual, hard-working, conscientious, and showing great initiative."</em></i> <small>- Kelli Smith, A Family for Every Child</small></strong>
+          </p>
+          <p>
             This site is meant to be a representitive of my professional career and aspirations. Currently, I'm looking for an opportunity to work in data science or public policy, but my focus is always on ensuring that my presence results in tangible benefits for any organization I join.
           </p>
           <h1>My current goal</h1>
@@ -65,7 +68,7 @@
           <h2>Macroeconomics and Policy Analysis</h2>
           <ul>
             <li>
-              <strong>International</strong>: Exchange Rates, trade balance, international finance, and globalisation.
+              <strong>International</strong>: Exchange Rates, growth, development, international finance, and globalisation.
             </li>
             <li>
               <strong>General</strong>: Classical, Kenyesian, Neoclassical, and Rational Expectation models; stability analysis.
@@ -75,7 +78,7 @@
             </li>
           </ul>
           <p>
-            For work samples, click on the projects tab.
+            To take a look at my resumes and transcripts, stop by the <a href="https://ibogley.github.io/website/documents/">documents</a> tab. For work samples, visit the <a href="https://ibogley.github.io/website/projects/">projects</a> tab. 
           </p>
         </div>
     </div>
