--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
         </div>
         <div class="main">
           <p>
-            Hello, my name is Ian. I graduated from the University of Oregon in 2020 majoring in Economics while minoring in mathematics and business administration. As of september 2020, I will be pursuing a Master's in Applied Economics from the same institution. Check out my bio for more information on where I grew up, my previous personal exploits, etc.
+            My generation is growing up during the golden age of information and data. The insight that can be obtained from statistics and modeling can concern scales previously unimaginable. My passion is to learn about the social inventions and institutions around us in the hope of a more efficient equilibrium.
           </p>
           <p>
             <strong><i><em>"I found Ian to be punctual, hard-working, conscientious, and showing great initiative."</em></i> <small>- Kelli Smith, A Family for Every Child</small></strong>
           </p>
           <p>
-            This site is meant to be a representitive of my professional career and aspirations. Currently, I'm looking for an opportunity to work in data science or public policy, but my focus is always on ensuring that my presence results in tangible benefits for any organization I join.
+            This site is meant to be a representitive of my professional career and aspirations. Currently, I'm looking for an opportunity to work in <b>data science</b> or <b>public policy</b>, but my focus is always on ensuring that my presence results in tangible benefits for any organization I join.
           </p>
           <h1>My current goal</h1>
           <p>I am currently looking for a summer internship for 2021, preferably in the realm of public policy or data analysis.</p>
@@ -78,7 +78,7 @@
             </li>
           </ul>
           <p>
-            To take a look at my resumes and transcripts, stop by the <a href="https://ibogley.github.io/website/documents/">documents</a> tab. For work samples, visit the <a href="https://ibogley.github.io/website/projects/">projects</a> tab. 
+            To take a look at my resumes and transcripts, stop by the <a href="https://ibogley.github.io/website/documents/">documents</a> tab. For work samples, visit the <a href="https://ibogley.github.io/website/projects/">projects</a> tab.
           </p>
         </div>
     </div>
