added trade project

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             This site is meant to be a representitive of my professional career and aspirations. Currently, I'm looking for an opportunity to work in <b>data science</b> or <b>public policy</b>, but my focus is always on ensuring that my presence results in tangible benefits for any organization I join.
           </p>
           <h1>My current goal</h1>
-          <p>I am currently looking for a summer internship for 2021, preferably in the realm of public policy or data analysis.</p>
+          <p>I am currently taking my final term of the University of Oregon as a Master's student. <b>Graduating in December of 2021</b>, I hope to find a stable position in the future where I can use my curiousity and expertise to help provide tangible benefits for our communities.</p>
           <h1>My Expertise</h1>
           <h2>Data analysis</h2>
           <ul>
