--- a/projects/index.html
+++ b/projects/index.html
@@ -38,6 +38,7 @@
           <p>
             Below you'll find various projects I've completed in school, a professional setting, or my within my personal queries. As time goes on this list will grow in size and quality, and I look forward to adding more of my work to this page.
           </p>
+          <iframe class="pdf" src="trade/final.pdf"></iframe>
           <iframe class="pdf" src="blog/blog_post_final.html"></iframe>
           <iframe class="pdf" src="transportation/trimet_proposal.pdf"></iframe>
           <iframe class="pdf" src="sf_women_statues/sf_monuments.pdf"></iframe>
