added google analytics functionality

--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <link rel="stylesheet" type="text/css" href="site.css">
   <title>Homepage</title>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4KJDT5YBB7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-4KJDT5YBB7');
+    </script>
     <div class="topbanner">
       <img class="profilepic" alt="LinkedIn Profile Picture" src="profilepic.jpg">
     </div>
