--- a/projects/index.html
+++ b/projects/index.html
@@ -17,7 +17,7 @@
       .show {display: none; }
       .hide:target + .show {display:block; }
       .hide:target {display: none; }
-      .hide:target ~ .pdf {display:inline; }
+      .hide:target ~ .pdf {display:block; }
       @media print { .hide, .show { display: none; } }
     </style>
   </head>
