--- a/index.html
+++ b/index.html
@@ -36,37 +36,22 @@
         </div>
         <div class="main">
           <p>
-            My generation is growing up during the golden age of information and data. The insight that can be obtained from statistics and modeling can concern scales previously unimaginable. My passion is to learn about the social inventions and institutions around us in the hope of a more efficient equilibrium.
+            My generation is growing up during the golden age of information and data. The insight that can be obtained from statistics and modeling can consider scales previously unimaginable. My passion is to use data analysis for economic development, growth, and informed decision-making.
           </p>
           <p>
             <strong><i><em>"I found Ian to be punctual, hard-working, conscientious, and showing great initiative."</em></i> <small>- Kelli Smith, A Family for Every Child</small></strong>
           </p>
           <p>
-            This site is meant to be a representitive of my professional career and aspirations. Currently, I'm looking for an opportunity to work in <b>data science</b> or <b>public policy</b>, but my focus is always on ensuring that my presence results in tangible benefits for any organization I join.
+            This site is meant to be a representitive of my professional career and aspirations. Currently, I'm looking for an opportunity to work in <b>data science</b> or <b>economic development</b>, but my focus is always on ensuring that my presence results in tangible benefits for any organization I join.
           </p>
           <h1>My current goal</h1>
-          <p>I am currently taking my final term of the University of Oregon as a Master's student. <b>Graduating in December of 2021</b>, I hope to find a stable position in the future where I can use my curiousity and expertise to help provide tangible benefits for our communities.</p>
+          <p>I am currently taking my final term of the University of Oregon as a Master's student. <b>Graduating in December of 2021</b>, I hope to find a stable position where I can use my curiousity and experience to help build something positive.</p>
           <h1>My Expertise</h1>
-          <h2>Data analysis</h2>
-          <ul>
-            <li>
-              <strong>Regression Analysis</strong>: Diff-in-diff, instrumetal variables, and OLS.
-            </li>
-            <li>
-              <strong>Machine Learning</strong>: Cross-validation; supervised, semi-supervised, and unsupervised learning.
-            </li>
-            <li>
-              <strong>Forecasting</strong>: Time series analysis (ARIMA, VAR, unit roots)
-            </li>
-            <li>
-              <strong>Big Data</strong>: Parallel programming, API's, command line interface, and database queries.
-            </li>
-            <li>
-              <strong>Languages/Tools</strong>: R, Python, and SQLite; Google BigQuery, Apache Spark, and Git/Github; tidymodels.
-            </li>
-          </ul>
           <h2>Macroeconomics and Policy Analysis</h2>
           <ul>
+            <li>
+              <strong>Economic Development</strong>: Economic rate of return, Political Economy Analysis, USAID Government Contracting.
+            </li>
             <li>
               <strong>International</strong>: Exchange Rates, growth, development, international finance, and globalisation.
             </li>
@@ -77,6 +62,25 @@
               <strong>Policy Analysis</strong>: Game theory, behavioral economics, and public goods.
             </li>
           </ul>
+          <h2>Data analysis</h2>
+          <ul>
+          <li>
+            <strong>Regression Analysis</strong>: Diff-in-diff, instrumetal variables, and OLS.
+          </li>
+          <li>
+            <strong>Machine Learning</strong>: Cross-validation; supervised, semi-supervised, and unsupervised learning.
+          </li>
+          <li>
+            <strong>Forecasting</strong>: Time series analysis (ARIMA, VAR, unit roots)
+          </li>
+          <li>
+            <strong>Big Data</strong>: Parallel programming, cloud computing, command line interface, and database queries.
+          </li>
+          <li>
+            <strong>Languages/Tools</strong>: R, Excel, and SQLite; Google BigQuery, Apache Spark, Git, and Github.
+          </li>
+        </ul>
+
           <p>
             To take a look at my resumes and transcripts, stop by the <a href="https://ibogley.github.io/website/documents/">documents</a> tab. For work samples, visit the <a href="https://ibogley.github.io/website/projects/">projects</a> tab.
           </p>
