--- a/projects/index.html
+++ b/projects/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="main">
           <p>
-            Below you'll find various projects I've completed in school, a professional setting, or my within my personal queries. As time goes on this list will grow in size and quality, and I look forward to adding more of my work to this page.
+            Below you'll find various projects I've completed in school, a professional setting, or my within my personal queries.
           </p>
           <div class="single_project_container">
             <a href="#hide1" class="hide" id="hide1">Coronavirus Lockdowns and Trade Integration</a>
