--- a/projects/index.html
+++ b/projects/index.html
@@ -37,7 +37,7 @@
           <br>
           <a href="https://www.kaggle.com/ianbogley">Kaggle Profile</a>
           <br>
-          <a href="mailto: ibogley@uoregon.edu">ibogley@uoregon.edu</a>
+          <a href="mailto: ianbogley8@gmail.com">ianbogley8@gmail.com</a>
           <br>
           541-829-2116
           </p>
