added IDG project

--- a/projects/index.html
+++ b/projects/index.html
@@ -47,42 +47,48 @@
             Below you'll find various projects I've completed in school, a professional setting, or my within my personal queries.
           </p>
           <div class="single_project_container">
-            <a href="#hide1" class="hide" id="hide1">Coronavirus Lockdowns and Trade Integration</a>
+            <a href="#hide1" class="hide" id="hide1">Barriers to Business in Serbia, Albania, and North Macedonia</a>
             <a href="#show1" class="show" id="show1">Collapse</a>
+            <iframe class="pdf" src="wb_barriers/wb_barriers.pdf"></iframe>
+          </div>
+          <p></p>
+          <div class="single_project_container">
+            <a href="#hide2" class="hide" id="hide2">Coronavirus Lockdowns and Trade Integration</a>
+            <a href="#show2" class="show" id="show2">Collapse</a>
             <iframe class="pdf" src="trade/final.pdf"></iframe>
           </div>
           <p></p>
           <div class="single_project_container">
-            <a href="#hide2" class="hide" id="hide2">US Presidential Poll Errors, 2016 and 2020</a>
-            <a href="#show2" class="show" id="show2">Collapse</a>
+            <a href="#hide3" class="hide" id="hide3">US Presidential Poll Errors, 2016 and 2020</a>
+            <a href="#show3" class="show" id="show3">Collapse</a>
             <iframe class="pdf" src="blog/blog_post_final.html"></iframe>
           </div>
           <p></p>
           <div class="single_project_container">
-            <a href="#hide3" class="hide" id="hide3">Research Proposal: Real Estate Hedonic Pricing Valuation of Various
+            <a href="#hide4" class="hide" id="hide4">Research Proposal: Real Estate Hedonic Pricing Valuation of Various
 Modes of Public Transportation
 </a>
-            <a href="#show3" class="show" id="show3">Collapse</a>
+            <a href="#show4" class="show" id="show4">Collapse</a>
             <iframe class="pdf" src="transportation/trimet_proposal.pdf"></iframe>
           </div>
           <p></p>
           <div class="single_project_container">
-            <a href="#hide4" class="hide" id="hide4">EDA in Python: Women Representation in City Property of San Francisco, an
+            <a href="#hide5" class="hide" id="hide5">EDA in Python: Women Representation in City Property of San Francisco, an
 Exploratoration</a>
-            <a href="#show4" class="show" id="show4">Collapse</a>
+            <a href="#show5" class="show" id="show5">Collapse</a>
             <iframe class="pdf" src="sf_women_statues/sf_monuments.pdf"></iframe>
           </div>
           <p></p>
           <div class="single_project_container">
-            <a href="#hide5" class="hide" id="hide5">Employee Satisfaction Surveys: Shelter Care Satisfaction Report: 2020
+            <a href="#hide6" class="hide" id="hide6">Employee Satisfaction Surveys: Shelter Care Satisfaction Report: 2020
 </a>
-            <a href="#show5" class="show" id="show5">Collapse</a>
+            <a href="#show6" class="show" id="show6">Collapse</a>
             <iframe class="pdf" src="survey/survey_2020.pdf"></iframe>
           </div>
           <p></p>
           <div class="single_project_container">
-            <a href="#hide6" class="hide" id="hide6">ARIMA Forecast: The End is Here!... Or is it?</a>
-            <a href="#show6" class="show" id="show6">Collapse</a>
+            <a href="#hide7" class="hide" id="hide7">ARIMA Forecast: The End is Here!... Or is it?</a>
+            <a href="#show7" class="show" id="show7">Collapse</a>
             <iframe class="pdf" src="case_study/case_study.pdf"></iframe>
           </div>
         </div>
