added to bio and homepage, added wb_barriers project

--- a/index.html
+++ b/index.html
@@ -36,24 +36,27 @@
         </div>
         <div class="main">
           <p>
-            My generation is growing up during the golden age of information and data. The insight that can be obtained from statistics and modeling can consider scales previously unimaginable. My passion is to use data analysis for economic development, growth, and informed decision-making.
+            My generation is growing up during the golden age of information and data. The internet, paired with digital tools available to us, provide an excellent opportunity to re-evaluate the way we make decisions and plan for a better future. My passion is to use data analysis for economic development, growth, and informed decision-making. I have relevant experience using both written and visual mediums for communication of data-based insights.
+          </p>
+          <p>
+            Some of the highlights include using Excel to visualize road usage demographics and patterns, researching barriers to business in the Western Balkans, proofreading USAID technical deliverables, extensive training in econometrics and statistics, schoolwork relating big data and object-oriented-programming, and a successful academic career focused on economic development and growth.
           </p>
           <p>
             <strong><i><em>"I found Ian to be punctual, hard-working, conscientious, and showing great initiative."</em></i> <small>- Kelli Smith, A Family for Every Child</small></strong>
           </p>
           <p>
-            This site is meant to be a representitive of my professional career and aspirations. Currently, I'm looking for an opportunity to work in <b>data science</b> or <b>economic development</b>, but my focus is always on ensuring that my presence results in tangible benefits for any organization I join.
+            This site is meant to be a representitive of my professional career and aspirations. Currently, I'm looking for an opportunity to work in <b>data science</b> or <b>economic development</b>, but my focus is always on doing my part to help achieve team goals.
           </p>
           <h1>My current goal</h1>
-          <p>I am currently taking my final term of the University of Oregon as a Master's student. <b>Graduating in December of 2021</b>, I hope to find a stable position where I can use my curiousity and experience to help build something positive.</p>
+          <p>I am currently taking my final term of the University of Oregon as a Master's student. <b>Graduating in December of 2021</b>, I am looking for the opportunity to use my empirical training to help others pursue more efficient decision-making. I am especially passionate about economic growth and development, having previous experience using data analysis in this context at the <a href="https://www.internationaldevelopmentgroup.com/about/">International Development Group.</a></p>
           <h1>My Expertise</h1>
           <h2>Macroeconomics and Policy Analysis</h2>
           <ul>
             <li>
-              <strong>Economic Development</strong>: Economic rate of return, Political Economy Analysis, USAID Government Contracting.
+              <strong>Economic Development</strong>: Economic rate of return, Political Economy Analysis, USAID Government Contracting, public transportation, and road usage patterns.
             </li>
             <li>
-              <strong>International</strong>: Exchange Rates, growth, development, international finance, and globalisation.
+              <strong>International</strong>: Exchange rates, macroeconomic growth, development, international finance, and globalisation.
             </li>
             <li>
               <strong>General</strong>: Classical, Kenyesian, Neoclassical, and Rational Expectation models; stability analysis.
@@ -64,23 +67,22 @@
           </ul>
           <h2>Data analysis</h2>
           <ul>
-          <li>
-            <strong>Regression Analysis</strong>: Diff-in-diff, instrumetal variables, and OLS.
-          </li>
-          <li>
-            <strong>Machine Learning</strong>: Cross-validation; supervised, semi-supervised, and unsupervised learning.
-          </li>
-          <li>
-            <strong>Forecasting</strong>: Time series analysis (ARIMA, VAR, unit roots)
-          </li>
-          <li>
-            <strong>Big Data</strong>: Parallel programming, cloud computing, command line interface, and database queries.
-          </li>
-          <li>
-            <strong>Languages/Tools</strong>: R, Excel, and SQLite; Google BigQuery, Apache Spark, Git, and Github.
-          </li>
-        </ul>
-
+            <li>
+              <strong>Regression Analysis</strong>: Diff-in-diff, instrumetal variables, and OLS.
+            </li>
+            <li>
+              <strong>Machine Learning</strong>: Cross-validation; supervised, semi-supervised, and unsupervised learning.
+            </li>
+            <li>
+              <strong>Forecasting</strong>: Time series analysis (ARIMA, VAR, unit roots)
+            </li>
+            <li>
+              <strong>Big Data</strong>: Parallel programming, cloud computing, command line interface, and database queries.
+            </li>
+            <li>
+              <strong>Languages/Tools</strong>: R, Excel, and SQLite; Google BigQuery, Apache Spark, Git, and Github.
+            </li>
+          </ul>
           <p>
             To take a look at my resumes and transcripts, stop by the <a href="https://ibogley.github.io/website/documents/">documents</a> tab. For work samples, visit the <a href="https://ibogley.github.io/website/projects/">projects</a> tab.
           </p>
