--- a/projects/index.html
+++ b/projects/index.html
@@ -47,48 +47,45 @@
             Below you'll find various projects I've completed in school, a professional setting, or my within my personal queries.
           </p>
           <div class="single_project_container">
-            <a href="#hide1" class="hide" id="hide1">Barriers to Business in Serbia, Albania, and North Macedonia</a>
-            <a href="#show1" class="show" id="show1">Collapse</a>
+            <a href="#show_wb_barriers" class="hide" id="show_wb_barriers">Barriers to Business in Serbia, Albania, and North Macedonia</a>
+            <a href="#hide_wb_barriers" class="show" id="hide_wb_barriers">Collapse</a>
             <iframe class="pdf" src="wb_barriers/wb_barriers.pdf"></iframe>
           </div>
           <p></p>
           <div class="single_project_container">
-            <a href="#hide2" class="hide" id="hide2">Coronavirus Lockdowns and Trade Integration</a>
-            <a href="#show2" class="show" id="show2">Collapse</a>
+            <a href="#show_covid" class="hide" id="show_covid">Coronavirus Lockdowns and Trade Integration</a>
+            <a href="#hide_covid" class="show" id="hide_covid">Collapse</a>
             <iframe class="pdf" src="trade/final.pdf"></iframe>
           </div>
           <p></p>
           <div class="single_project_container">
-            <a href="#hide3" class="hide" id="hide3">US Presidential Poll Errors, 2016 and 2020</a>
-            <a href="#show3" class="show" id="show3">Collapse</a>
+            <a href="#show_pres" class="hide" id="show_pres">US Presidential Poll Errors, 2016 and 2020</a>
+            <a href="#hide_pres" class="show" id="hide_pres">Collapse</a>
             <iframe class="pdf" src="blog/blog_post_final.html"></iframe>
           </div>
           <p></p>
           <div class="single_project_container">
-            <a href="#hide4" class="hide" id="hide4">Research Proposal: Real Estate Hedonic Pricing Valuation of Various
-Modes of Public Transportation
-</a>
-            <a href="#show4" class="show" id="show4">Collapse</a>
+            <a href="#show_prop" class="hide" id="show_prop">Research Proposal: Real Estate Hedonic Pricing Valuation of Various Modes of Public Transportation</a>
+            <a href="#hide_prop" class="show" id="hide_prop">Collapse</a>
             <iframe class="pdf" src="transportation/trimet_proposal.pdf"></iframe>
           </div>
           <p></p>
           <div class="single_project_container">
-            <a href="#hide5" class="hide" id="hide5">EDA in Python: Women Representation in City Property of San Francisco, an
+            <a href="#show_python" class="hide" id="show_python">EDA in Python: Women Representation in City Property of San Francisco, an
 Exploratoration</a>
-            <a href="#show5" class="show" id="show5">Collapse</a>
+            <a href="#hide_python" class="show" id="hide_python">Collapse</a>
             <iframe class="pdf" src="sf_women_statues/sf_monuments.pdf"></iframe>
           </div>
           <p></p>
           <div class="single_project_container">
-            <a href="#hide6" class="hide" id="hide6">Employee Satisfaction Surveys: Shelter Care Satisfaction Report: 2020
-</a>
-            <a href="#show6" class="show" id="show6">Collapse</a>
+            <a href="#show_emp" class="hide" id="show_emp">Employee Satisfaction Surveys: Shelter Care Satisfaction Report: 2020</a>
+            <a href="#hide_emp" class="show" id="hide_emp">Collapse</a>
             <iframe class="pdf" src="survey/survey_2020.pdf"></iframe>
           </div>
           <p></p>
           <div class="single_project_container">
-            <a href="#hide7" class="hide" id="hide7">ARIMA Forecast: The End is Here!... Or is it?</a>
-            <a href="#show7" class="show" id="show7">Collapse</a>
+            <a href="#show_arima" class="hide" id="show_arima">ARIMA Forecast: The End is Here!... Or is it?</a>
+            <a href="#hide_arima" class="show" id="hide_arima">Collapse</a>
             <iframe class="pdf" src="case_study/case_study.pdf"></iframe>
           </div>
         </div>
