--- a/index.html
+++ b/index.html
@@ -38,17 +38,32 @@
           <p>
             My generation is growing up during the golden age of information and data. The internet, paired with digital tools available to us, provide an excellent opportunity to re-evaluate the way we make decisions and plan for a better future. My passion is to use data analysis for economic development, growth, and informed decision-making. I have relevant experience using both written and visual mediums for communication of data-based insights.
           </p>
-          <p>
-            Some of the highlights include using Excel to visualize road usage demographics and patterns, researching barriers to business in the Western Balkans, proofreading USAID technical deliverables, extensive training in econometrics and statistics, schoolwork relating big data and object-oriented-programming, and a successful academic career focused on economic development and growth.
-          </p>
+          <br>
+          <h1>Highlights</h1>
+          <ul>
+            <font size = "+2">
+            <li><strong>Graduating in December of 2021</strong> with a <strong>Master's Degree</strong> in Applied Economics</li>
+            <li>Academic focus on <strong>economic growth</strong>, <strong>development</strong>, <strong>globalisation</strong>, and <strong>international trade</strong></li>
+            <li>Experience using both <strong>writing</strong> and visuals to describe data-based insights</li>
+            <li>Experience using <strong>Excel</strong> to visualize <strong>road usage demographics and trends</strong></li>
+            <li>Research into <strong>barriers to business</strong> in the <strong>Western Balkans</strong></li>
+            <li>Experience proofreading <strong>USAID contract</strong> technical deliverables</li>
+            <li>Extensive training in <strong>econometrics</strong> and <strong>statistics</strong></li>
+            <li>Schoolwork relating <strong>big data</strong>, <strong>machine-learning</strong>, and <strong>object-oriented-programming</strong> (R, Python)</li>
+            </font>
+          </ul>
+          <br>
+          <br>
           <p>
             <strong><i><em>"I found Ian to be punctual, hard-working, conscientious, and showing great initiative."</em></i> <small>- Kelli Smith, A Family for Every Child</small></strong>
           </p>
           <p>
             This site is meant to be a representitive of my professional career and aspirations. Currently, I'm looking for an opportunity to work in <b>data science</b> or <b>economic development</b>, but my focus is always on doing my part to help achieve team goals.
           </p>
+          <br>
           <h1>My current goal</h1>
           <p>I am currently taking my final term of the University of Oregon as a Master's student. <b>Graduating in December of 2021</b>, I am looking for the opportunity to use my empirical training to help others pursue more efficient decision-making. I am especially passionate about economic growth and development, having previous experience using data analysis in this context at the <a href="https://www.internationaldevelopmentgroup.com/about/">International Development Group.</a></p>
+          <br>
           <h1>My Expertise</h1>
           <h2>Macroeconomics and Policy Analysis</h2>
           <ul>
