added current job search info to homepage

--- a/index.html
+++ b/index.html
@@ -62,7 +62,12 @@
           </p>
           <br>
           <h1>My current goal</h1>
-          <p>I am currently taking my final term of the University of Oregon as a Master's student. <b>Graduating in December of 2021</b>, I am looking for the opportunity to use my empirical training to help others pursue more efficient decision-making. I am especially passionate about economic growth and development, having previous experience using data analysis in this context at the <a href="https://www.internationaldevelopmentgroup.com/about/">International Development Group.</a></p>
+          <p>
+            I am currently taking my final term of the University of Oregon as a Master's student. <b>Graduating in December of 2021</b>, I am looking for the opportunity to use my empirical training to help others pursue more efficient decision-making. I am especially passionate about economic growth and development, having previous experience using data analysis in this context at the <a href="https://www.internationaldevelopmentgroup.com/about/">International Development Group.</a>
+          </p>
+          <p>
+            My current job search focuses on roles begginning in <strong>January or February</strong> of 2022, or on <strong>part time internships</strong> for <strong>Fall</strong> of 2021.
+          </p>
           <br>
           <h1>My Expertise</h1>
           <h2>Macroeconomics and Policy Analysis</h2>
