added expertise page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </div>
     <div class="topnav">
       <a href="https://ibogley.github.io/website/">Home</a>
+      <a href="https://ibolgey.github.io/website/expertise/">Expertise</a>
       <a href="https://ibogley.github.io/website/projects/">Projects</a>
       <a href="https://ibogley.github.io/website/documents/">Documents</a>
       <a href="https://ibogley.github.io/website/bio/">Biography</a>
@@ -36,27 +37,37 @@
         </div>
         <div class="main">
           <p>
-            My generation is growing up during the golden age of information and data. The internet, paired with digital tools available to us, provide an excellent opportunity to re-evaluate the way we make decisions and plan for a better future. My passion is to use data analysis for economic development, growth, and informed decision-making. I have relevant experience using both written and visual mediums for communication of data-based insights.
+           <font size = "+3"><strong><i><em>"I found Ian to be punctual, hard-working, conscientious, and showing great initiative."</em></i>
+             <br>
+             <small>- Kelli Smith, A Family for Every Child</small></strong></font>
+          </p>
+          <p>
+            My generation is growing up during the golden age of information and data. The internet, paired with other complimentary digital tools available to us, provide an excellent opportunity to re-evaluate the way we make decisions and plan for a better future. My passion is to use data analysis for economic development, growth, and informed decision-making. I have relevant experience using both written and visual mediums for communication of data-based insights.
           </p>
           <br>
           <h1>Highlights</h1>
           <ul>
             <font size = "+2">
             <li><strong>Graduating in December of 2021</strong> with a <strong>Master's Degree</strong> in Applied Economics</li>
+
             <li>Academic focus on <strong>economic growth</strong>, <strong>development</strong>, <strong>globalisation</strong>, and <strong>international trade</strong></li>
-            <li>Experience using both <strong>writing</strong> and visuals to describe data-based insights</li>
+
+            <li>Experience using both <strong>writing</strong> and <strong>visuals</strong> to describe data-based insights</li>
+
             <li>Experience using <strong>Excel</strong> to visualize <strong>road usage demographics and trends</strong></li>
-            <li>Research into <strong>barriers to business</strong> in the <strong>Western Balkans</strong></li>
+
             <li>Experience proofreading <strong>USAID contract</strong> technical deliverables</li>
-            <li>Extensive training in <strong>econometrics</strong> and <strong>statistics</strong></li>
+
+            <li>Expertise in <strong>econometrics</strong> and <strong>statistics</strong></li>
+
             <li>Schoolwork relating <strong>big data</strong>, <strong>machine-learning</strong>, and <strong>object-oriented-programming</strong> (R, Python)</li>
+
+            <li>Research into <strong>barriers to business</strong> in the <strong>Western Balkans</strong>, as well as the economic history of <strong>Russia</strong> since the fall of the USSR.</li>
+
+            <li>Personal curiousity into subjects like <strong>The 2008 Financial Crisis</strong>, <strong>credit</strong> (microfinance), <strong>history/PEA</strong> (China, US, Japan), and <strong>nonviolent de-escalation/compromise based diplomacy</strong></li>
             </font>
           </ul>
           <br>
-          <br>
-          <p>
-            <strong><i><em>"I found Ian to be punctual, hard-working, conscientious, and showing great initiative."</em></i> <small>- Kelli Smith, A Family for Every Child</small></strong>
-          </p>
           <p>
             This site is meant to be a representitive of my professional career and aspirations. Currently, I'm looking for an opportunity to work in <b>data science</b> or <b>economic development</b>, but my focus is always on doing my part to help achieve team goals.
           </p>
@@ -68,43 +79,8 @@
           <p>
             My current job search focuses on roles begginning in <strong>January or February</strong> of 2022, or on <strong>part time internships</strong> for <strong>Fall</strong> of 2021.
           </p>
-          <br>
-          <h1>My Expertise</h1>
-          <h2>Macroeconomics and Policy Analysis</h2>
-          <ul>
-            <li>
-              <strong>Economic Development</strong>: Economic rate of return, Political Economy Analysis, USAID Government Contracting, public transportation, and road usage patterns.
-            </li>
-            <li>
-              <strong>International</strong>: Exchange rates, macroeconomic growth, development, international finance, and globalisation.
-            </li>
-            <li>
-              <strong>General</strong>: Classical, Kenyesian, Neoclassical, and Rational Expectation models; stability analysis.
-            </li>
-            <li>
-              <strong>Policy Analysis</strong>: Game theory, behavioral economics, and public goods.
-            </li>
-          </ul>
-          <h2>Data analysis</h2>
-          <ul>
-            <li>
-              <strong>Regression Analysis</strong>: Diff-in-diff, instrumetal variables, and OLS.
-            </li>
-            <li>
-              <strong>Machine Learning</strong>: Cross-validation; supervised, semi-supervised, and unsupervised learning.
-            </li>
-            <li>
-              <strong>Forecasting</strong>: Time series analysis (ARIMA, VAR, unit roots)
-            </li>
-            <li>
-              <strong>Big Data</strong>: Parallel programming, cloud computing, command line interface, and database queries.
-            </li>
-            <li>
-              <strong>Languages/Tools</strong>: R, Excel, and SQLite; Google BigQuery, Apache Spark, Git, and Github.
-            </li>
-          </ul>
           <p>
-            To take a look at my resumes and transcripts, stop by the <a href="https://ibogley.github.io/website/documents/">documents</a> tab. For work samples, visit the <a href="https://ibogley.github.io/website/projects/">projects</a> tab.
+            To take a look at my resumes and transcripts, stop by the <a href="https://ibogley.github.io/website/documents/">documents</a> tab. For work samples, visit the <a href="https://ibogley.github.io/website/projects/">projects</a> tab. For an in-depth rundown of my areas of expertise, visit the <a href="https://ibogley.github.io/website/expertise/">expertise</a> tab.
           </p>
         </div>
     </div>
