--- a/projects/index.html
+++ b/projects/index.html
@@ -46,6 +46,12 @@
         <div class="main">
           <p>
             Below you'll find various projects I've completed in school, a professional setting, or my within my personal queries.
+          </p>
+          <div class="single_project_container">
+            <a href="#show_wb" class="hide" id="show_wb">Barriers to Business in Albania, Serbia, and North Macedonia</a>
+            <a href="#hide_wb" class="show" id="hide_wb">Collapse</a>
+            <iframe class="pdf" src="wb_barriers/wb_barriers.pdf"></iframe>
+          </div>
           <p></p>
           <div class="single_project_container">
             <a href="#show_covid" class="hide" id="show_covid">Coronavirus Lockdowns and Trade Integration</a>
