fixed expertise links

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <link rel="stylesheet" type="text/css" href="site.css">
   <title>Homepage</title>
-  <head> 
+  <head>
     <div class="topbanner">
       <img class="profilepic" alt="LinkedIn Profile Picture" src="profilepic.jpg">
     </div>
     <div class="topnav">
       <a href="https://ibogley.github.io/website/">Home</a>
-      <a href="https://ibolgey.github.io/website/expertise/">Expertise</a>
+      <a href="https://ibogley.github.io/website/expertise/">Expertise</a>
       <a href="https://ibogley.github.io/website/projects/">Projects</a>
       <a href="https://ibogley.github.io/website/documents/">Documents</a>
       <a href="https://ibogley.github.io/website/bio/">Biography</a>
