fixed spelling error

--- a/documents/index.html
+++ b/documents/index.html
@@ -58,7 +58,7 @@
           </div>
           <br>
           <p>
-            <strong>Public Policy</strong>: I am passionate about using my experience to better the lives of others. What better way to help others succeed in the modern world than assist in informed decision-making? With experience in economic development and government contracting (specifically with USAID), I am well equipped to assit teams on this front.
+            <strong>Public Policy</strong>: I am passionate about using my experience to better the lives of others. What better way to help others succeed in the modern world than assist in informed decision-making? With experience in economic development and government contracting (specifically with USAID), I am well equipped to assist teams on this front.
           </p>
           <div class="single_doc_container">
             <a href="#hide2" class="hide" id="hide2"><h3>Resume: Public Policy Focused</h3></a>
